# us-regions

./: .gitignore  AGENTS.md  CLAUDE.md  DIVISION_NOTE_TYPE.md  LICENSE  Makefile  README.md  REGION_NOTE_TYPE.md  US_REGIONS_DECK_PLAN.md  pyproject.toml
.github/workflows/: anki-workbench.yml
data/: README.md
data/raw/: us_divisions_notes_seed.csv  us_map_asset_sources.csv  us_regions_notes_seed.csv  us_state_border_reference.csv
media/: README.md
release/: ankiweb.md
scripts/: build_apkg.py  capture_readme_screenshot.py  fetch_map_assets.py  generate_locator_maps.py  populate_division_border_summaries.py
tests/: test_repo_hygiene.py
